# sutra

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  RELEASE.md  build_binary.py  install.sh  pyproject.toml
.claude/: settings.json
.claude/skills/implement-task/: SKILL.md
.github/workflows/: release.yml
.sutra/: config.json
.sutra/runs/REQ-001/: planner-output.raw.txt  planner-prompt.md  progress.json  summary.md  task-plan.json  token-ledger.json
.sutra/runs/REQ-001/tasks/T001/: prompt.md
.sutra/runs/REQ-001/tasks/T002/: prompt.md
.sutra/runs/REQ-001/tasks/T003/: prompt.md
.sutra/runs/REQ-001/tasks/T004/: prompt.md
.sutra/runs/REQ-001/tasks/T005/: prompt.md
.sutra/runs/VALIDATION-FLOW/: planner-output.raw.txt  progress.json  summary.md  task-plan.json  token-ledger.json
docs/: decisions.md  progress.md
examples/: REQ-001.md
requirements/: REQ-001.md
sutra_cli/: main.py
tests/: test_cli_smoke.py
