[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-cli"
version = "0.1.0"
description = "Sutra: governed AI coding flow for Codex/Gemini and Claude Code"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sutra" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
sutra = "sutra_cli.main:main"

[tool.setuptools]
packages = ["sutra_cli"]
