[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-cli"
version = "0.2.1"
description = "Sutra: governed AI coding flow for Codex/Gemini and Claude Code"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sutra Team" }]
license = { text = "MIT" }
keywords = ["ai", "orchestration", "claude", "gemini", "codex", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sairintechnologycom/sutra"
Repository = "https://github.com/sairintechnologycom/sutra.git"
Issues = "https://github.com/sairintechnologycom/sutra/issues"

[project.scripts]
sutra = "sutra_cli.main:main"

[tool.setuptools]
packages = ["sutra_cli"]
